# filecoyote

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  plans.md  tailwind.css
assets/: main.css
runConfigurations/: dx serve.run.xml
src/: main.rs
src/client/: README.md  ahl.rs  entry.rs  mod.rs
src/client/assets/: tailwind.css
src/client/assets/ahl/: ahl.css
src/client/assets/material-symbols/: material-symbols.css
src/client/components/: dx-components-theme.css  flex_grid.rs  icon.rs  invisible_drop.rs  mod.rs  thumbnail.rs
src/client/css/: borderdance.css  fadeinout.css  style.css
src/client/dioxus_components/: dx-components-theme.css  mod.rs
src/client/views/: home.rs
src/server/: README.md  mod.rs
src/server/api/: mod.rs
src/server/backend/: README.md  entry.rs  mod.rs
src/server/backend/db/entity/: file_data.rs  tag_data.rs  tag_entry.rs
