[package]
name = "filecoyote"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
rand = "0.9.2"

# server deps

sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros",
    "with-chrono", "with-json", "schema-sync", "entity-registry"], optional = true}

[features]
default = []
# designed for web, but desktop and other platforms should work just fine!
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dep:sea-orm"]
